--- a/ASPNETSimple.WEB/packages.config
+++ b/ASPNETSimple.WEB/packages.config
@@ -13,4 +13,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="NLog" version="4.3.11" targetFramework="net461" />
+  <package id="NLog.Config" version="4.3.11" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.3.11" targetFramework="net461" />
 </packages>
