NLog: Additional settings

--- a/ASPNETSimple.WEB/NLog.config
+++ b/ASPNETSimple.WEB/NLog.config
@@ -12,13 +12,17 @@
     <target name="DebugLogFile" xsi:type="File" fileName="${basedir}/logs/debug/${shortdate}.txt" 
             layout="${longdate} ${message}"/>
     
-    <target name="EntityLogFile" xsi:type="File" fileName="${basedir}/logs/entity/${shortdate}.txt" 
+    <target name="EntityLogFile" xsi:type="File" fileName="${basedir}/logs/dal_info/entity/${shortdate}.txt" 
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring} {stacktrace}"/>
+
+    <target name="dalfile" xsi:type="File" fileName="${basedir}/logs/dal_info/${shortdate}.txt"
+            layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}"/>
     
   </targets>
 
   <rules>
     <logger name="ASPNETSimple.DAL.Infrastructure.DbFactory" minlevel="Info" writeTo="EntityLogFile" final="true" />
+    <logger name="ASPNETSimple.DAL.*" minlevel="Info" maxlevel="Info" writeTo="dalfile" final="true"/>
     
     <logger name="*" minlevel="Info" writeTo="logfile" />
     <logger name="*" levels="Error,Fatal"  writeTo="ErrorsLogFile" />
