DAL: Key to id, From General IRepository to separate, UserRepository new methods

--- a/ASPNETSimple.DAL/ASPNETSimple.DAL.csproj
+++ b/ASPNETSimple.DAL/ASPNETSimple.DAL.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Infrastructure\Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\Interfaces\IUserRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
