--- a/ASPNETSimple.WEB/Web.config
+++ b/ASPNETSimple.WEB/Web.config
@@ -27,6 +27,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" name="cookies" />
+    </authentication>
   </system.web>
   
   <runtime>
