--- a/ASPNETSimple.WEB/NLog.config
+++ b/ASPNETSimple.WEB/NLog.config
@@ -3,29 +3,35 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <targets>
-    <target name="logfile" xsi:type="File" fileName="${basedir}/logs/${shortdate}.txt"
+    <target name="tcp" xsi:type="NLogViewer" address="tcp://127.0.0.1:60204" 
+            layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}" />
+    
+    <target name="logfile" xsi:type="File" fileName="${basedir}/logs/${shortdate}/info.txt"
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}"/>
     
-    <target name="ErrorsLogFile" xsi:type="File" fileName="${basedir}/logs/errors/${shortdate}_errors.txt" 
+    <target name="ErrorsLogFile" xsi:type="File" fileName="${basedir}/logs/${shortdate}/errors.txt" 
             layout="${longdate} ${message} ${exception:format=tostring} {stacktrace}"/>
     
-    <target name="DebugLogFile" xsi:type="File" fileName="${basedir}/logs/debug/${shortdate}.txt" 
+    <target name="DebugLogFile" xsi:type="File" fileName="${basedir}/logs/${shortdate}/debug.txt" 
             layout="${longdate} ${message}"/>
     
-    <target name="EntityLogFile" xsi:type="File" fileName="${basedir}/logs/dal_info/entity/${shortdate}.txt" 
+    <target name="EntityLogFile" xsi:type="File" fileName="${basedir}/logs/${shortdate}/entity.txt" 
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring} {stacktrace}"/>
 
-    <target name="dalfile" xsi:type="File" fileName="${basedir}/logs/dal_info/${shortdate}.txt"
+    <target name="dalfile" xsi:type="File" fileName="${basedir}/logs/${shortdate}/dal.txt"
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}"/>
     
   </targets>
 
   <rules>
+    <logger name="*" minlevel="Trace" writeTo="tcp" />
+    
     <logger name="ASPNETSimple.DAL.Infrastructure.DbFactory" minlevel="Info" writeTo="EntityLogFile" final="true" />
     <logger name="ASPNETSimple.DAL.*" minlevel="Info" maxlevel="Info" writeTo="dalfile" final="true"/>
     
     <logger name="*" minlevel="Info" writeTo="logfile" />
     <logger name="*" levels="Error,Fatal"  writeTo="ErrorsLogFile" />
     <logger name="*" levels="Debug" writeTo="DebugLogFile" />
+  
   </rules>
 </nlog>
